# template_local_mlflow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
devops/: .env  bootstrap.sh
devops/tasks/: experiment_creation.py  mlflow_server.sh
model_development/: example_mlflow_client.ipynb
